@@ -73,6 +73,8 @@ checkAutoStartDownloadsFromDecrypter.text=Start downloads from decrypters and fo
 
 checkEnableDirectDownloads.text=Enable direct downloads
 
+checkPreventStandbyWhileDownloading.text=Prevent standby while downloading
+
 panelApplicationSettings.border=Application
 panelConnections1.border=Connections
 panelProxySettings.border=Additional Proxy servers
